Ugly gui, pulling multiple statements works

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,10 @@
             <version>3.12.2</version>
             <scope>test</scope>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>9.0.0</version>
+        </dependency>
     </dependencies>
 </project>
